# uv-workspaces

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.github/workflows/: test.yml
scripts/: dev.py  setup.py  test.py  utils.py
