[project]
name = "uv-workspaces"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "pre-commit>=4.0.1",
]
lint = []

[tool.uv.workspace]
members = ["packages/*"]
